--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+title: 'Amirah Hazwani Abdul Rahum
+logo: https://scmathuitmkedah.github.io/ScMathUiTMKedah/images/amirah.png
+description: |
+  Senior Lecturer  Department of Mathematical Sciences  UiTM Kedah Branch Campus  amirah017@uitm.edu.my    
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-minimal
