--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 'Amirah Hazwani Abdul Rahum
+title: Amirah Hazwani Abdul Rahum
 logo: https://scmathuitmkedah.github.io/ScMathUiTMKedah/images/amirah.jpg
 description: |
   Senior Lecturer  Department of Mathematical Sciences  UiTM Kedah Branch Campus  amirah017@uitm.edu.my    
