--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 title: Amirah Hazwani Abdul Rahum
 logo: https://scmathuitmkedah.github.io/ScMathUiTMKedah/images/amirah.jpg
 description: |
-  Senior Lecturer  Department of Mathematical Sciences  UiTM Kedah Branch Campus  amirah017@uitm.edu.my    
+  Senior Lecturer  
+  Department of Mathematical Sciences  
+  UiTM Kedah Branch Campus  
+  amirah017@uitm.edu.my    
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
